# avazar_tool

./: .gitignore  .gitmodules  Cargo.toml
circom_algebra/src/: algebra.rs
circuit_graphing/: Cargo.toml
circuit_graphing/src/: bridge_partitioning.rs  graphing_circuits.rs  leiden_clustering.rs  lib.rs
circuit_graphing/src/directed_acyclic_graph/: dag_from_partition.rs  dag_postprocessing.rs  equivalence_classes.rs  iterated_label_propagation.rs  mod.rs
circuits_and_constraints/: Cargo.toml
circuits_and_constraints/src/: circuit.rs  constraint.rs  lib.rs  lightweight_circuit.rs  normalisation.rs  utils.rs
circuits_and_constraints/src/acir/: circuit_implementation.rs  constraint_implementation.rs  mod.rs
circuits_and_constraints/src/r1cs/: circuit_implementation.rs  constraint_implementation.rs  mod.rs
civer/: Cargo.toml
civer/src/: lib.rs  safety_ffsol.rs  safety_z3.rs  tags_checking.rs
clustering/: Cargo.toml
clustering/src/: argument_parsing.rs  decompose_circuit.rs  leiden_clustering.rs  lib.rs  main.rs
equivalence/: Cargo.toml
equivalence/src/: argument_parsing.rs  compare_circuits.rs  encoding.rs  fingerprinting.rs  lib.rs  main.rs
solvers_interface/: Cargo.toml
solvers_interface/src/: civer_interface.rs  cvc5_interface.rs  ffsol_interface.rs  lib.rs  nia_z3_interface.rs  parallel_interface.rs  picus_interface.rs  smt2_utils.rs  yices_interface.rs  z3_interface.rs
solvers_interface/src/civer_interface/: safety_z3.rs  tags_checking.rs
utils/: Cargo.toml
utils/src/: assignment.rs  equivalence_structure.rs  lib.rs  read_original_structure.rs  read_r1cs.rs  read_specification.rs  read_structure.rs  small_utilities.rs  structure.rs  union_find.rs  write_r1cs.rs
zk-genver/: Cargo.toml
zk-genver/src/: input_user.rs  main.rs  modular_reasoning.rs  processing_utils.rs  tree_constraints.rs
zk-genver/src/correctness/: correctness_check.rs  mod.rs  modular_reasoning.rs
zk-genver/src/determinism/: determinism_check.rs  mod.rs  modular_reasoning.rs
zk-genver/src/equivalence/: equivalence_check.rs  mod.rs  modular_reasoning.rs
