[package]
name = "circuits_and_constraints"
version = "0.1.0"
edition = "2024"

[dependencies]
utils = {path = "../utils" }
circom_algebra = {path = "../circom_algebra" }
either = "1.15.0"
itertools = "0.14.0"
rand = "0.9.2"
rand_chacha = "0.9.0"
rustsat = "0.7.4"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"