[package]
name = "civer"
version = "1.0.0"
authors = ["Costa Group UCM"]
edition = "2018"


[dependencies]
solvers_interface = {path =  "../solvers_interface"}
circom_algebra = {path = "../circom_algebra"}
clap = "2.33.0"
ansi_term = "0.12.1"
wast = "39.0.0"
exitcode = "1.1.2"
num-bigint-dig = "0.6.0"
z3 = {version="0.11.2"}
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
rand = "0.8"
libc = "0.2"
nix = { version = "0.30", features = ["process", "signal"] }
wait-timeout = "0.2"