[package]
name = "equivalence"
version = "0.1.0"
edition = "2024"

[dependencies]
num-bigint-dig = "0.6.0"
circuits_and_constraints = {path = "../circuits_and_constraints" }
clap = {version = "4.5.53", features = ["derive"] }
utils = {path = "../utils" }
itertools = "0.14.0"
rustsat = "0.7.4"
rustsat-kissat = "0.7.4"
thiserror = "2"
anyhow = "1.0.100"