[package]
name = "solvers_interface"
version = "1.0.0"
authors = ["Costa Group UCM"]
edition = "2018"


[dependencies]
circom_algebra = {path = "../circom_algebra"}
utils = {path = "../utils"}
clap = "2.33.0"
ansi_term = "0.12.1"
wast = "39.0.0"
exitcode = "1.1.2"
num-bigint-dig = "0.6.0"
wait-timeout = "0.2.1"
rand = "0.8"
libc = "0.2"
nix = { version = "0.30", features = ["process", "signal"] }
z3 = {version="0.20.0"}
